subnet.tf
resource "aws_subnet" "private-southeast-1a" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.0.0/19"
  availability_zone = "ap-southeast-1a"
  tags = {
    Name = "private-ap-southeast-1a"
    "kubenetes.io/role/internal-elb" = "1"
    "kubenetes.io/cluster/demo" = "owned"
  }
}

resource "aws_subnet" "private-southeast-1b" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.32.0/19"
  availability_zone = "ap-southeast-1b"
  tags = {
    Name = "private-ap-southeast-1b"
    "kubenetes.io/role/internal-elb" = "1"
    "kubenetes.io/cluster/demo" = "owned"
  }
}

resource "aws_subnet" "public-southeast-1a" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.64.0/19"
  availability_zone = "ap-southeast-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-ap-southeast-1a"
    "kubenetes.io/role/internal-elb" = "1"
    "kubenetes.io/cluster/demo" = "owned"
  }
}


resource "aws_subnet" "public-southeast-1b" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.96.0/19"
  availability_zone = "ap-southeast-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-ap-southeast-1b"
    "kubenetes.io/role/internal-elb" = "1"
    "kubenetes.io/cluster/demo" = "owned"
  }
}
